Complete Function: Add, Edit, Delete, Details. Doing Search function

--- a/CAPSTONE_TEAM01_2024/Views/Shared/_MainLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_MainLayout.cshtml
@@ -67,7 +67,7 @@
                 </li>
                 <li class="nav-item text-start m-1">
                     <a class="row d-flex nav-link text-dark justify-content-center align-items-center"
-                       asp-area="" asp-controller="ProfileManager" asp-action="ProfileManager"
+                       asp-area="" asp-controller="ProfileManager" asp-action="Index_ProfileManager"
                        style="text-decoration:none">
                         <div class="col-2">
                             <img src="~/Resources/Img/Icon2.png"
