--- a/CAPSTONE_TEAM01_2024/Views/_ViewStart.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/_ViewStart.cshtml
@@ -10,7 +10,7 @@
         case "EndSemesterReport":
         case "SemesterPlan":
         case "Statistics":
-        case "ProfileManager":
+        case "Index_ProfileManager":
         case "ShowStatistics":
         case "ClassList":
             Layout = "_MainLayout";
