minor bug fix for search algo

--- a/CAPSTONE_TEAM01_2024/Views/Categories/SchoolYear.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/SchoolYear.cshtml
@@ -16,7 +16,7 @@
             <div class="row w-100">
                 <div class="col-md-6 d-flex">
                         <div class="input-group w-100">
-                            <input id="SearchField" type="text" class="form-control" placeholder="Nhập năm học cần tìm" oninput="filterTable()">
+                            <input id="SchoolYearSearchField" type="text" class="form-control" placeholder="Nhập năm học cần tìm" oninput="filterTable()">
                             <button class="btn btn-secondary"
                                     type="button"
                                     style="white-space: nowrap;"
